--- a/ADL.ipynb
+++ b/ADL.ipynb
@@ -16,40 +16,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "general  ==>  ['libinstall', 'utils', 'dataset_viewer', 'libimport', 'confusion_matrix_pretty_print']\n"
+      "general  ==>  ['confusion_matrix_pretty_print', 'dataset_viewer', 'libimport', 'libinstall', 'utils']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Installing import-ipynb: 100%|██████████| 11/11 [00:00<00:00, 944.97it/s]\n"
+      "WARNING: You are using pip version 19.2.1, however version 19.3.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n",
+      "Installing memory_profiler:   0%|                                                             | 0/12 [00:00<?, ?it/s]WARNING: You are using pip version 19.2.1, however version 19.3.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n",
+      "Installing memory_profiler: 100%|████████████████████████████████████████████████████| 12/12 [00:00<00:00, 12.13it/s]\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1212 15:37:54.872155 17576 deprecation_wrapper.py:119] From c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\tfplot\\figure.py:18: The name tf.Summary is deprecated. Please use tf.compat.v1.Summary instead.\n",
+      "\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\sklearn\\externals\\joblib\\__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skip! labextensions are installed\n",
-      "Utils loaded successfully!!\n",
       "Libraries loaded successfully.\n",
-      "preprocessing  ==>  ['preprocessing']\n",
-      "segmentation  ==>  ['Probabilistic_old', 'FixedSlidingWindow', 'Probabilistic', 'FixedEventWindow', 'segmentation_abstract', 'FixedTimeWindow']\n",
-      "feature_extraction  ==>  ['Cook1FeatureExtraction', 'DeepLearningFeatureExtraction', 'SimpleFeatureExtraction', 'SequenceFeatureExtraction', 'feature_abstract']\n",
-      "activity_fetcher  ==>  ['CookActivityFetcher', 'activity_fetcher_abstract', 'MaxActivityFetcher']\n",
-      "classifier  ==>  ['SVM', 'classifier_abstract', 'KerasClassifier', 'LSTMTest']\n",
-      "combiner  ==>  ['combiner_abstract', 'SimpleCombiner', 'oldSimpleCombiner']\n",
-      "evalutation  ==>  ['evalution_abstract', 'Simple', 'KFold']\n",
+      "Utils loaded successfully!!\n",
+      "preprocessing  ==>  ['preprocessing_abstract', 'SimplePreprocessing']\n",
+      "segmentation  ==>  ['FixedEventWindow', 'FixedSlidingWindow', 'FixedTimeWindow', 'Probabilistic', 'Probabilistic_old', 'segmentation_abstract']\n",
+      "feature_extraction  ==>  ['Cook1FeatureExtraction', 'DeepLearningFeatureExtraction', 'feature_abstract', 'SequenceFeatureExtraction', 'SimpleFeatureExtraction']\n",
+      "activity_fetcher  ==>  ['activity_fetcher_abstract', 'CookActivityFetcher', 'MaxActivityFetcher']\n",
+      "classifier  ==>  ['classifier_abstract', 'KerasClassifier', 'LSTMTest', 'SVM']\n",
+      "combiner  ==>  ['combiner_abstract', 'oldSimpleCombiner', 'SimpleCombiner']\n",
+      "evaluation  ==>  ['evaluation_abstract', 'KFold', 'Simple']\n",
       "metric  ==>  ['metric_abstract', 'old']\n",
-      "datatool  ==>  ['A4H', 'VanKasteren', 'CASAS', 'dataset_abstract']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
-      "  warnings.warn(msg, category=DeprecationWarning)\n"
+      "datatool  ==>  ['A4H', 'CASAS', 'dataset_abstract', 'VanKasteren']\n"
      ]
     }
    ],
@@ -64,7 +88,7 @@
     "from activity_fetcher import *\n",
     "from classifier import *\n",
     "from combiner import *\n",
-    "from evalutation import *\n",
+    "from evaluation import *\n",
     "from metric import *\n",
     "from datatool import *\n",
     "from constants import *\n"
@@ -72,26 +96,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<datatool.CASAS.Home1 at 0x7fa70f9c62e8>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-c8c83a1431e7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmethods\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'method'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mmethods\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevaluation\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'method'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrunml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Projects\\UnifiedAR\\UnifiedAR\\datatool\\CASAS.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    112\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    113\u001b[0m         self.dataset = self.loadCASASDataset(\n\u001b[1;32m--> 114\u001b[1;33m             'https://drive.google.com/uc?id=1WY26Tmv9kBvdto4gy_YKnvc8KeknKB_i&authuser=0&export=download')\n\u001b[0m\u001b[0;32m    115\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Projects\\UnifiedAR\\UnifiedAR\\datatool\\CASAS.py\u001b[0m in \u001b[0;36mloadCASASDataset\u001b[1;34m(self, data_url)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mloadCASASDataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_url\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'datasetfiles'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mdatafile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"datasetfiles/data.txt\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatafile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
     }
    ],
    "source": [
-    "evalutate(dataset,runml)\n",
-    "\n",
-    "def runml(dataset):\n",
+    "def runml(dataset, Train0, Test0):\n",
+    "    Train=methods.preprocessing[0].process(dataset,Train0)\n",
+    "    Test=methods.preprocessing[0].process(dataset,Test0)\n",
     "    \n",
-    "\n"
+    "    \n",
+    "dataset=methods.dataset[0]['method']().load()\n",
+    "methods.evaluation[0]['method']().evaluate(dataset,runml)"
    ]
   },
   {
