--- a/result_viewer2.ipynb
+++ b/result_viewer2.ipynb
@@ -2,9 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "Utils loaded successfully!!\n",
+      "metric  ==>  ['classical', 'CMbasedMetric', 'EventBasedMetric', 'event_confusion_matrix', 'metric_abstract', 'MyMetric']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "File asghari can not import\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "524b05daceca406583a97d7060cdd8a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='file', options=(('dataset:KaryoAdlNormal date:200203_20-10-20 Simp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#%matplotlib widget\n",
     "%pylab inline\n",
@@ -22,22 +53,36 @@
     "    run_info,dataset,evalres=utils.loadState(file)\n",
     "    for i in range(len(evalres)):\n",
     "        quality=evalres[i].quality\n",
-    "        print('Evalution quality fold=%d is f1=%.2f acc=%.2f precision=%.2f recall=%.2f' % (i, quality.f1,quality.accuracy,quality.precision,quality.recall))\n",
+    "        print('Evalution quality fold=%d is %s' % (i, quality))\n",
     "        \n",
-    "    vs.visualize(dataset)\n",
+    "    #vs.visualize(dataset)\n",
+    "    print(len(dataset.sensor_events))\n",
     "    for i in range(len(evalres)):\n",
-    "        vs.my_result_analyse(evalres[i].real_events,evalres[i].pred_events)\n",
+    "        # vs.my_result_analyse(evalres[i].real_events,evalres[i].pred_events)\n",
+    "        vs.plotJoinAct(dataset,evalres[i].real_events,evalres[i].pred_events)\n",
     "\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-d4a4df53e6b3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msensor_events\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "real_events"
+    "dataset.sensor_events"
    ]
   },
   {
@@ -66,6 +111,13 @@
   {
    "cell_type": "raw",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
