--- a/result_viewer3.ipynb
+++ b/result_viewer3.ipynb
@@ -9,27 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "Utils loaded successfully!!\n",
-      "metric  ==>  ['classical', 'CMbasedMetric', 'event_confusion_matrix', 'MyMetric', 'metric_abstract', 'EventBasedMetric']\n"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e84c64721ed841abb0ac8cd37524f508",
+       "model_id": "9bdc22ee082844f49e495537ddbcc3f4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('200207_10-22-20-A4H', '200207_10-22-20-A4H'), ('…"
+       "interactive(children=(Dropdown(description='file', options=(('200418_19-32-37-Home1', '200418_19-32-37-Home1')…"
       ]
      },
      "metadata": {},
@@ -57,7 +55,7 @@
     "        \n",
     "    #vs.visualize(dataset)\n",
     "    print(len(dataset.sensor_events))\n",
-    "    vs.plot_pre_act(dataset,{'test':evalres})\n",
+    "    vs.plot_per_act(dataset,{'test':evalres})\n",
     "    vs.plot_CM(dataset,evalres)\n",
     "    for i in range(len(evalres)):\n",
     "        # vs.my_result_analyse(evalres[i].real_events,evalres[i].pred_events)\n",
@@ -281,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
