--- a/result_viewer3.ipynb
+++ b/result_viewer3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,14 +20,25 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python36_64\\lib\\site-packages\\IPython\\core\\magics\\pylab.py:160: UserWarning:\n",
+      "\n",
+      "pylab import has clobbered these variables: ['interactive']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bdc22ee082844f49e495537ddbcc3f4",
+       "model_id": "82775c3c8e024a11b7ebe81edd475744",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('200418_19-32-37-Home1', '200418_19-32-37-Home1')…"
+       "interactive(children=(Dropdown(description='file', options=(('200429_21-34-15-Home1', '200429_21-34-15-Home1')…"
       ]
      },
      "metadata": {},
@@ -52,6 +63,7 @@
     "    for i in range(len(evalres)):\n",
     "        quality=evalres[i].quality\n",
     "        print('Evalution quality fold=%d is %s' % (i, quality))\n",
+    "        print('func%s' % (evalres[i].functions))\n",
     "        \n",
     "    #vs.visualize(dataset)\n",
     "    print(len(dataset.sensor_events))\n",
