new Version IPSN

--- a/result_eval-multi.ipynb
+++ b/result_eval-multi.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-28T20:48:39.381951Z",
-     "start_time": "2020-03-28T20:48:36.647604Z"
+     "start_time": "2020-10-25T11:32:58.079Z"
     },
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utils loaded successfully!!\n",
+      "metric  ==>  ['classical', 'event_confusion_matrix2', 'CMbasedMetric', 'event_confusion_matrix', 'MyMetric', 'metric_abstract', 'EventBasedMetric']\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d144549bb4df42e4a5e8a8f25b36989a",
+       "model_id": "ac2491810b564464b9ff8ea87bfecfd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,26 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-02T16:55:26.942264Z",
-     "start_time": "2020-03-02T16:55:23.386718Z"
+     "end_time": "2020-10-25T11:42:06.763458Z",
+     "start_time": "2020-10-25T11:36:58.091553Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Utils loaded successfully!!\n",
-      "metric  ==>  ['classical', 'CMbasedMetric', 'event_confusion_matrix', 'MyMetric', 'metric_abstract', 'EventBasedMetric']\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7135919707ae42e8bf7b21bae1eaa080",
+       "model_id": "6aa0066d84c34bd08b2a62247b3e1553",
        "version_major": 2,
        "version_minor": 0
       },
