--- a/result_eval-multi.ipynb
+++ b/result_eval-multi.ipynb
@@ -2,26 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-10-25T11:32:58.079Z"
+     "end_time": "2020-11-03T21:59:12.832621Z",
+     "start_time": "2020-11-03T21:59:11.550664Z"
     },
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Utils loaded successfully!!\n",
-      "metric  ==>  ['classical', 'event_confusion_matrix2', 'CMbasedMetric', 'event_confusion_matrix', 'MyMetric', 'metric_abstract', 'EventBasedMetric']\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac2491810b564464b9ff8ea87bfecfd0",
+       "model_id": "21b287e704ba48e5a335fd55d758e99f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +51,7 @@
     "            run_info[t],dataset[t],evalres[t]=utils.loadState(file)\n",
     "            print(evalres[t])\n",
     "            for i in evalres[t]:\n",
-    "                evalres[t][i].Sdata=None\n",
+    "                evalres[t][i]['test'].Sdata=None\n",
     "                \n",
     "            dataset[t].sensor_events=None\n",
     "            res[t]=an.mergeEvals(dataset[t],evalres[t],mymetric)\n",
@@ -71,15 +64,15 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:42:06.763458Z",
-     "start_time": "2020-10-25T11:36:58.091553Z"
+     "end_time": "2020-11-03T21:55:11.377687Z",
+     "start_time": "2020-11-03T21:55:11.315437Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aa0066d84c34bd08b2a62247b3e1553",
+       "model_id": "1ffabca13df043be9cbf34ced84c5f99",
        "version_major": 2,
        "version_minor": 0
       },
