--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -4,60 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To run the Pipeline: Please execute following code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-04T13:18:15.498617Z",
-     "start_time": "2020-11-04T13:18:12.314327Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 131.93it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================== The required libraries have been  installed ===================\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dc8ef002d054344a90db79471eb9fd2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='segmentation', options={\"FixedEventWindow [{'var': 'size', 'min': …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import general.libinstall\n",
-    "import general.uiutils\n",
-    "general.uiutils.runPipelineUI()"
+    "To run the Pipeline (all steps from Sensor events to Activity events) : Please execute following code"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-04T19:50:08.205931Z",
+     "start_time": "2020-11-04T19:50:08.156618Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import general.libinstall\n",
+    "import general.uiutils\n",
+    "general.uiutils.runPipelineUI()"
+   ]
   }
  ],
  "metadata": {
