--- a/GEM-Details.ipynb
+++ b/GEM-Details.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View the details evaluation of a specific run"
+    "You can select a specific run and it will show the evaluation information and display charts for precision, recall and f1 measure."
    ]
   },
   {
