--- a/Gem-Compare-Multi-Run.ipynb
+++ b/Gem-Compare-Multi-Run.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-04T20:39:47.733322Z",
-     "start_time": "2020-11-04T20:39:46.310956Z"
+     "end_time": "2020-12-08T10:51:11.339836Z",
+     "start_time": "2020-12-08T10:51:10.136643Z"
     }
    },
    "outputs": [],
@@ -22,6 +22,13 @@
     "import general.uiutils\n",
     "%pylab inline\n",
     "general.uiutils.loadGemMultiUI()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Click here to run the pipeline]()"
    ]
   }
  ],
