--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-04T19:50:08.205931Z",
-     "start_time": "2020-11-04T19:50:08.156618Z"
+     "end_time": "2020-11-24T10:50:56.740889Z",
+     "start_time": "2020-11-24T10:50:53.397283Z"
     }
    },
    "outputs": [],
@@ -22,6 +22,20 @@
     "import general.uiutils\n",
     "general.uiutils.runPipelineUI()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Click here to evaluate the run](GEM-Details.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
