--- a/All.ipynb
+++ b/All.ipynb
@@ -53,7 +53,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gem-Compare-Multi-Run\n"
+    "# Gem-Compare-Multi-Run\n",
+    "You can select multiple run (by holding CTRL key) and it will show the f1 in evaluation information for those run for each activities and also it will shows the combination of activities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import general.libinstall\n",
+    "import general.uiutils\n",
+    "%pylab inline\n",
+    "general.uiutils.loadGemMultiUI()"
    ]
   }
  ],
