--- a/GEM-Details.ipynb
+++ b/GEM-Details.ipynb
@@ -9,20 +9,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-04T20:46:40.106311Z",
-     "start_time": "2020-11-04T20:46:33.095253Z"
+     "end_time": "2020-12-08T10:57:48.319814Z",
+     "start_time": "2020-12-08T10:57:47.904512Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06c2f38a45f144aabb1bda477a36fbe4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='file', options=(('0-wardpaper-a', '0-wardpaper-a'), ('0-wardpaper-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
     "%pylab inline\n",
     "general.uiutils.loadGemMetricUI()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Click here to compare multiple run](Gem-Compare-Multi-Run.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -30,18 +66,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
