--- a/All.ipynb
+++ b/All.ipynb
@@ -18,9 +18,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-04T21:12:42.510795Z",
-     "start_time": "2020-11-04T21:12:39.493942Z"
-    }
+     "end_time": "2021-02-25T18:02:54.788997Z",
+     "start_time": "2021-02-25T18:02:51.906666Z"
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -40,7 +41,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-25T19:21:29.618381Z",
+     "start_time": "2021-02-25T19:21:23.672549Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import general.libinstall\n",
@@ -60,7 +66,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-25T19:27:58.448764Z",
+     "start_time": "2021-02-25T19:27:58.275405Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import general.libinstall\n",
@@ -68,6 +79,13 @@
     "%pylab inline\n",
     "general.uiutils.loadGemMultiUI()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -86,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
