--- a/GEM-Details.ipynb
+++ b/GEM-Details.ipynb
@@ -9,36 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-08T10:57:48.319814Z",
-     "start_time": "2020-12-08T10:57:47.904512Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
+     "end_time": "2021-04-22T09:50:54.010183Z",
+     "start_time": "2021-04-22T09:50:53.007814Z"
     },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06c2f38a45f144aabb1bda477a36fbe4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('0-wardpaper-a', '0-wardpaper-a'), ('0-wardpaper-…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
@@ -56,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": []
   }
@@ -66,6 +47,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
