--- a/Gem-Compare-Multi-Run.ipynb
+++ b/Gem-Compare-Multi-Run.ipynb
@@ -12,15 +12,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-08T10:51:11.339836Z",
-     "start_time": "2020-12-08T10:51:10.136643Z"
-    }
+     "end_time": "2021-04-22T10:01:17.241905Z",
+     "start_time": "2021-04-22T10:01:16.421864Z"
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
     "%pylab inline\n",
+    "#%pylab widget\n",
     "general.uiutils.loadGemMultiUI()"
    ]
   },
@@ -28,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Click here to run the pipeline]()"
+    "[Click here to run the pipeline](Pipeline.ipynb)"
    ]
   }
  ],
@@ -48,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -94,5 +96,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
