--- a/WardMetric.ipynb
+++ b/WardMetric.ipynb
@@ -2,44 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-03T22:52:40.030858Z",
-     "start_time": "2020-11-03T22:52:38.419610Z"
-    }
+     "end_time": "2021-03-28T08:49:00.509014Z",
+     "start_time": "2021-03-28T08:48:59.748310Z"
+    },
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 134.64it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================== The required libraries have been  installed ===================\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b492eeacd62e4b53995533dcfff01a66",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('201103_20-35-13-KaryoAdlNormal', '201103_20-35-1…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
@@ -50,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
@@ -60,6 +33,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
