--- a/GEM-Details.ipynb
+++ b/GEM-Details.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-09T09:41:34.809279Z",
-     "start_time": "2021-11-09T09:41:34.002576Z"
+     "end_time": "2022-05-19T09:52:07.354579Z",
+     "start_time": "2022-05-19T09:52:05.514353Z"
     },
     "scrolled": false
    },
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 123.47it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 95.97it/s]\n"
      ]
     },
     {
@@ -36,12 +36,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49a70a5c462847c3a995e74b1fbc4d96",
+       "model_id": "c39af2d473c24e5381f9d45465a28703",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('0-wardpaper-b', '0-wardpaper-b'), ('0-wardpaper-…"
+       "interactive(children=(Dropdown(description='file', options=(('220519_09-47-50-Home1', '220519_09-47-50-Home1')…"
       ]
      },
      "metadata": {},
