--- a/result_eval.ipynb
+++ b/result_eval.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-03T21:45:25.170853Z",
-     "start_time": "2020-11-03T21:45:24.929796Z"
+     "end_time": "2022-06-01T15:09:13.093111Z",
+     "start_time": "2022-06-01T15:09:12.972591Z"
     },
     "scrolled": false
    },
@@ -37,22 +37,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.6/site-packages/IPython/core/magics/pylab.py:160: UserWarning:\n",
-      "\n",
-      "pylab import has clobbered these variables: ['interactive']\n",
+      "/opt/conda/lib/python3.8/site-packages/IPython/core/magics/pylab.py:159: UserWarning: pylab import has clobbered these variables: ['interactive']\n",
       "`%matplotlib` prevents importing * from pylab and numpy\n",
-      "\n"
+      "  warn(\"pylab import has clobbered these variables: %s\"  % clobbered +\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e147de8a092f4f0696cdabe6994844ca",
+       "model_id": "d64675a33457454ca5e7d50e6f3ffaa8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('201103_20-35-13-KaryoAdlNormal', '201103_20-35-1…"
+       "interactive(children=(Dropdown(description='file', options=(('meta_dataset 220519_12-44-58-Home2', 'meta_datas…"
       ]
      },
      "metadata": {},
@@ -227,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
