--- a/result_viewer-gact.ipynb
+++ b/result_viewer-gact.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:32:39.000007Z",
-     "start_time": "2020-10-25T11:32:37.612894Z"
+     "end_time": "2022-05-19T09:59:29.901105Z",
+     "start_time": "2022-05-19T09:59:29.220565Z"
     }
    },
    "outputs": [
@@ -14,20 +14,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "Utils loaded successfully!!\n",
-      "metric  ==>  ['classical', 'event_confusion_matrix2', 'CMbasedMetric', 'event_confusion_matrix', 'MyMetric', 'metric_abstract', 'EventBasedMetric']\n"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59f44d9a07844bf98719084cec6203c6",
+       "model_id": "10c45e8c337a4f1eb6d57de171e69fc0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('testdata', 'testdata'), ('200514_19-35-59-VanKas…"
+       "interactive(children=(Dropdown(description='file', options=(('210225_18-47-34-Home1', '210225_18-47-34-Home1')…"
       ]
      },
      "metadata": {},
@@ -442,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
