--- a/result_viewer3-Copy1.ipynb
+++ b/result_viewer3-Copy1.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-27T08:49:45.598430Z",
-     "start_time": "2020-08-27T08:49:44.164569Z"
+     "end_time": "2022-06-02T16:05:56.873866Z",
+     "start_time": "2022-06-02T16:05:56.157766Z"
     }
    },
    "outputs": [
@@ -21,20 +21,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "Utils loaded successfully!!\n",
-      "metric  ==>  ['classical', 'event_confusion_matrix2', 'CMbasedMetric', 'event_confusion_matrix', 'MyMetric', 'metric_abstract', 'EventBasedMetric']\n"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28a7ca1dd3d6469eb8e9b102e55578ba",
+       "model_id": "3f6ea221db3e4488a1a1b2c6f78ea3dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('testdata', 'testdata'), ('200514_19-35-59-VanKas…"
+       "interactive(children=(Dropdown(description='file', options=(('meta_dataset 220602_15-19-15-A4H', 'meta_dataset…"
       ]
      },
      "metadata": {},
@@ -193,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
